Screen TagResults implemented.

--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -2,4 +2,10 @@
     <!-- Default screen margins, per the Android Design guidelines. -->
     <dimen name="activity_horizontal_margin">16dp</dimen>
     <dimen name="activity_vertical_margin">16dp</dimen>
+
+    <dimen name="recycler_view_divider">16dp</dimen>
+    <dimen name="item_margin">8dp</dimen>
+    <dimen name="owner_profile_image_size">24dp</dimen>
+
+    <dimen name="owner_name_text_size">12sp</dimen>
 </resources>
